# foti

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES.md
backend/: .dockerignore  .env.production.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/foti_backend/: __init__.py  __main__.py  aesthetic.py  api.py  backfill.py  collections.py  colors.py  config.py  db.py  dupes.py  embedder.py  face_pipeline.py  faces.py  imageio.py  importer.py  persons.py  scanner.py  schema.sql  search.py  tagging.py  watcher.py  xmp.py
backend/foti_backend/web/: index.html
backend/tests/: conftest.py  test_colors.py  test_dupes.py  test_harness.py  test_persons.py  test_review_gaps.py  test_xmp.py
docs/: ARCHITECTURE.md  DEPLOY.md  ROADMAP.md
ui/desktop/: README.md
ui/desktop/src/: index.html  main.js  styles.css
ui/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ui/desktop/src-tauri/src/: lib.rs
