[project]
name = "foti-backend"
version = "0.1.0"
description = "Foti — AI-powered photo management backend daemon"
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Elias Wieland" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlite-vec>=0.1.6",
    "pillow>=11.0",
    "pillow-heif>=0.18",
    "exifread>=3.0",
    "open-clip-torch>=2.30",
    "torch>=2.5",
    "torchvision>=0.20",
    "numpy>=2.0",
    "typer>=0.15",
    "rich>=13.9",
    "watchdog>=6.0",
    "rawpy>=0.27.0",
    "imagehash>=4.3.2",
    "insightface>=1.0.1",
]

[project.optional-dependencies]
raw = ["rawpy>=0.24"]
# Face detection (InsightFace) needs an ONNX Runtime. Pick exactly ONE of the
# two extras below — installing both can shadow each other's providers.
#   pip install "foti-backend[cpu]"   → runs everywhere, no GPU needed
#   pip install "foti-backend[gpu]"   → NVIDIA CUDA-12 GPU acceleration
cpu = ["onnxruntime>=1.20"]
gpu = [
    "onnxruntime-gpu>=1.26.0",
    # CUDA-12 runtime libs for onnxruntime-gpu's CUDA EP (it links
    # libcublasLt.so.12 etc). torch ships its own cu13 set; these coexist
    # (distinct sonames). Put their lib dirs on LD_LIBRARY_PATH so the face
    # indexer runs on GPU instead of falling back to CPU. See docs/DEPLOY.md.
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cuda-nvrtc-cu12",
]

[project.scripts]
foti-backend = "foti_backend.__main__:cli"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["foti_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"
